--- a/summarizer_fe/package.json
+++ b/summarizer_fe/package.json
@@ -5,10 +5,13 @@
     "main": "main.js",
     "author": "aprici7y",
     "license": "MIT",
-    "devDependencies": {
-        "electron": "^32.2.0",
+    "dependencies": {
+        "axios": "^1.6.2",
         "keytar": "^7.9.0",
         "sqlite3": "^5.1.7"
+    },
+    "devDependencies": {
+        "electron": "^32.2.0"
     },
     "scripts": {
         "start": "electron ."
